Add battery monitoring, RPLidar integration, and comprehensive documentation
- Added battery_monitor_pkg with INA219 sensor integration
- Added rplidar_ros package for RPLidar A1 laser scanner
- Created comprehensive ROS_TOPICS_DOCUMENTATION.md with all nodes, topics, and launch commands
- Updated README.md with complete testing procedures
- Added RViz configuration notes for lidar visualization
- All core systems (motor control, OLED display, battery monitoring, lidar) now complete and tested
- Ready for SLAM integration with Cartographer

--- a/.gitignore
+++ b/.gitignore
@@ -85,5 +85,8 @@ notes/
 TODO.txt
 NOTES.txt
 
-# Context Aware File for Augment Agents
+# Context Aware File for Augment Agents (contains development notes)
 augment_context_aware.md
+
+# Hardware-specific files that may contain sensitive info
+*.uf2
